data/derived/comb/progs/unify/prog7503.ml.out
Characters 304-308:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type ('a * int) list
       but an expression was expected of type int list list
       Type 'a * int is not compatible with type int list 
